@@ -8,9 +8,17 @@ import java.util.List;
 import java.util.function.Predicate;
 
 public class Search {
-    public static void main(String[] args) throws IOException {
-        Path start = Paths.get(".");
-        search(start, path -> path.toFile().getName().endsWith(".js")).forEach(System.out::println);
+
+    private static boolean isArgumentsValid(String[] args) {
+        return args.length >= 2 && Files.exists(Path.of(args[0]));
+    }
+
+    public static void main(String[] args) throws IOException, IllegalArgumentException {
+        if (!isArgumentsValid(args)) {
+            throw new IllegalArgumentException("A valid path and file suffix required");
+        }
+        Path start = Paths.get(args[0]);
+        search(start, path -> path.toFile().getName().endsWith(args[1])).forEach(System.out::println);
     }
 
     public static List<Path> search(Path root, Predicate<Path> condition) throws IOException {
